# irrevon

./: .cursorignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ASSETS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSING.md  MAINTAINERS.md  Makefile  NOTICE  PACKAGE_README.md  README.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-LICENSES.md  THIRD-PARTY-NOTICES.md  docker-compose.yml  hatch_build.py  pyproject.toml  vercel.json
.cursor/: BUGBOT.md  cli.json  environment.json  hooks.json
.cursor/hooks/: deny.sh
.cursor/rules/: benchmark-integrity.mdc  contracts.mdc  docs-evidence.mdc  testing.mdc  workflows.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  nightly-failure-body.md
.github/ISSUE_TEMPLATE/: benchmark-integrity.yml  bug.yml  config.yml  documentation.yml  nightly-failure.md  proposal.yml  question.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  nightly.yml  release.yml  sandbox.yml  scorecard.yml  site-deploy.yml
Detent Workbench Desktop Concept/: .thumbnail  Detent Workbench.dc.html  StatusPill.dc.html
bench/: PUBLISHING.md  README.md
bench/runs/: README.md
docs/: benchmark-preregistration.md  benchmark.md  ci.md  discoverability-metrics.json  discoverability.md  effect-semantics-mappings.md  execution-plan.md  incident-replay-example.md  master-doc.md  operations.md  project-status.json  project-status.md  release-process.md  review-queue.md  rfc-001-first-slice.md  rfc-002-engine-design.md  security-policy.md
docs/decisions/: 0000-scope-freeze.md  0010-stripe-api-version.md  0012-c2-sandbox.md  0013-implementation-language.md  0014-licensing.md  0015-schema-validation-tooling.md  0016-frontend-workbench-stack.md  0017-build-orchestration.md  0018-distribution-model.md  0019-record-schemas-and-api-contracts.md  0020-identity-procedure.md  0021-record-schemas-admission.md  0022-migration-runner.md  0023-rename-to-irrevon.md  0024-serve-read-surface.md  0025-site-discovery-surface.md  0026-scope-freeze-wording-sanitization.md  0027-site-vercel-deploy.md  0028-apache-2-license.md  0029-site-vercel-analytics.md  0030-bench-harness-contracts.md  0031-bench-ecosystem-interop.md  0032-causal-histories-and-conformance.md  0033-verifiable-freeze-and-attribution-declarations.md  0034-continuous-worker-and-provider-adapters.md  0035-external-contributions.md  0036-loopback-evidence-privacy.md  0037-intent-resource-bounds.md  0038-main-vercel-auto-deploy.md  README.md
docs/history/: execution-plan-pre-implementation.md
migrations/: 0001_roles.sql  0002_tables.sql  0003_functions.sql  0004_grants.sql  0005_read_role.sql
schemas/: README.md  bench-environment.schema.json  bench-fault-schedule.schema.json  bench-freeze-registration.schema.json  bench-manifest.schema.json  bench-result.schema.json  bench-run-manifest.schema.json  bench-variants.schema.json  bench-workload.schema.json  capability-declaration.schema.json  dispatch-receipt.schema.json  effect-record.schema.json  intent-contract.schema.json  reconciliation-finding.schema.json
scripts/: assets-registry.json  bootstrap-tools.sh  build-assets-registry.py  build-sbom.py  build-third-party-license-pack.py  build-third-party-notices.py  campaign_url.py  check-bench-integrity.py  check-dco.sh  check-dist-contents.py  check-frozen.sh  check-integrity.sh  check-public-data.py  check-public-truth.py  dist-smoke-inner.sh  dist-smoke.sh  indexnow.py  launch-audit.sh  master-doc.sha256  release-dry-run.sh  setup-repo-settings.sh  site-production-smoke.py  third-party.json  vercel-build.sh
site/: .gitignore  ASSETS.md  CLAIMS.md  README.md  astro.config.mjs  deployment-policy.test.mjs  docs-manifest.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  provenance-policy.test.mjs  search-intents.json  search-policy.mjs  search-policy.test.mjs  tsconfig.json  vercel.json
site/deploy/: README-workflow.yml
site/docs/: headers-spec.md
site/e2e/: a11y.spec.ts  budget.spec.ts  demo.spec.ts  discoverability.spec.ts  install.spec.ts  links.spec.ts  pages.ts  provenance.spec.ts  (+3 more)
tasks/: README.md  T-000-language-stack-spike.md  T-101-identity-and-intent.md  T-102-ledger-and-gate.md  T-103-dispatcher-refdest-recovery.md  T-104-flagship-demo-e2e.md  T-105-bench-foundation.md  T-106-repair-nightly-reliability.md  T-107-harden-workbench-serve-headers.md  T-108-require-workbench-browser-gate.md  T-109-enforce-sdist-content-contract.md  T-110-reconcile-public-truth.md  T-111-disclose-developmental-benchmark-pilots.md  T-112-fail-closed-benchmark-workflow.md  T-113-harden-site-accessibility-semantics.md  T-114-reconcile-asset-license-truth.md  T-115-fail-closed-release-workflow.md  T-116-fail-closed-sandbox-workflow.md  T-117-harden-init-failure-and-dsn.md  T-118-cover-site-dependencies.md  T-119-pin-ci-node-and-fix-attention-reflow.md  T-120-reconcile-pr13-and-consolidate-guides.md  T-121-open-source-launch-completion.md  T-122-complete-discoverability-system.md  T-123-final-launch-truth-and-security-audit.md  T-124-reconcile-final-ci-security-history-truth.md  T-125-prepare-v0-1-0-public-launch.md  T-126-fix-clean-room-cli-onboarding.md  T-127-prepare-release-and-dependency-contracts.md  T-128-polish-public-site-launch-surfaces.md  T-129-complete-community-truth-and-onboarding.md  T-130-hostile-release-supply-chain-review.md  T-131-hostile-launch-site-accessibility-review.md  T-132-correct-conduct-reporting-route.md  T-133-hostile-clean-room-onboarding-review.md  T-134-close-release-supply-chain-findings.md  T-135-close-launch-site-audit-findings.md  T-136-fix-clean-room-onboarding-defects.md  T-137-close-disabled-discussions-link-blocker.md  T-138-final-privacy-security-settings-audit.md  (+3 more)
tests/: conftest.py
web/: .gitignore  .prettierignore  .size-limit.json  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  playwright.live.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
(+553 files in other folders)
