# Irrevon — reference reconciliation engine.
# Stack per ADR-0013 (Python 3.13, uv, pytest+Hypothesis, psycopg 3, rfc8785 pinned);
# packaging per ADR-0018 (single `irrevon` package, src layout, hatchling).
# License: Apache-2.0 (ADR-0028, owner-ratified 2026-07-21).

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "irrevon"
# Single version source: src/irrevon/__init__.py __version__ (hatch dynamic).
dynamic = ["version"]
description = "Evidence-first reconciliation for irreversible AI-agent actions"
readme = "PACKAGE_README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = [
    "ai-agents",
    "distributed-systems",
    "idempotency",
    "reconciliation",
    "reliability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    # RFC 8785 (JCS) encoder — version-pinned per ADR-0013; guarded by the committed
    # cross-implementation conformance vectors in tests/identity/vectors/.
    "rfc8785==0.1.4",
    # JSON Schema 2020-12 validation of the trust-boundary contracts (schemas/).
    "jsonschema>=4.25",
    # Postgres driver (sync — single-writer POC per ADR-0013/ADR-002).
    "psycopg[binary]>=3.3.4",
]

[project.urls]
Homepage = "https://github.com/PranavMishra28/irrevon"
Documentation = "https://github.com/PranavMishra28/irrevon#readme"
Repository = "https://github.com/PranavMishra28/irrevon"
Issues = "https://github.com/PranavMishra28/irrevon/issues"
Changelog = "https://github.com/PranavMishra28/irrevon/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-xdist>=3.8",
    "hypothesis>=6.157",
    "mypy>=1.19",
    "types-jsonschema>=4.25",
    "ruff>=0.14",
    "import-linter>=2.5",
    # Official SPDX parser/validator used by the release dry run.
    "spdx-tools==0.8.5",
]

[project.scripts]
irrevon = "irrevon.cli:entrypoint"

[tool.hatch.version]
path = "src/irrevon/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/irrevon"]
# The prebuilt workbench (web/dist staged to src/irrevon/_web by `make
# dist-stage`) is gitignored built output: hatchling `artifacts` is the
# mechanism that re-includes it without breaking editable installs when it is
# absent (ADR-0018; a plain force-include of a missing dir would fail).
artifacts = ["src/irrevon/_web/**"]

# Built wheels carry the canonical trust-boundary schemas AND the plain-SQL
# migrations; editable/dev installs resolve the repo directories directly
# (see irrevon.contract.validation and irrevon.ledger.db.migrations_dir).
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "irrevon/_schemas"
"migrations" = "irrevon/_migrations"
"THIRD-PARTY-NOTICES.md" = "irrevon/_legal/THIRD-PARTY-NOTICES.md"
"THIRD-PARTY-LICENSES.md" = "irrevon/_legal/THIRD-PARTY-LICENSES.md"
"ASSETS.md" = "irrevon/_legal/ASSETS.md"

# The sdist is wheel-buildable with NO Node: it carries the prebuilt workbench
# assets alongside the sources (ADR-0018: prebuilt assets in wheel AND sdist).
[tool.hatch.build.targets.sdist]
# `only-include` is load-bearing: unlike pattern-based `include`, it selects
# these exact project-root paths and cannot recursively match unrelated
# repository surfaces that happen to contain src/, README.md, etc.
# Hatch additionally force-includes the root .gitignore as a build-system input.
only-include = [
    "src",
    "schemas",
    "migrations",
    "README.md",
    "PACKAGE_README.md",
    "LICENSING.md",
    "LICENSE",
    "NOTICE",
    "THIRD-PARTY-NOTICES.md",
    "THIRD-PARTY-LICENSES.md",
    "ASSETS.md",
    "CHANGELOG.md",
    "pyproject.toml",
    "hatch_build.py",
]
artifacts = ["src/irrevon/_web/**"]

# Build honesty hook (hatch_build.py): IRREVON_REQUIRE_WEB=1 refuses to build
# a distributable artifact when the staged workbench is missing.
[tool.hatch.build.hooks.custom]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires the local Postgres from docker-compose.yml (run via `make py-test-integration`)",
]

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src"]
warn_unreachable = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
# The design docs write lifecycle×classification matrices and n−1 arithmetic
# with the typographic glyphs; docstrings quote them verbatim. The benchmark
# statistics modules additionally quote the preregistration's α/δ/Δ notation.
allowed-confusables = ["×", "−", "–", "α", "δ", "Δ"]

# Architectural import boundaries (RFC-002 §14; master doc §12.1 row 4 static leg).
# Contracts are part of the frozen conformance surface — weakening one is an
# invariant-affecting change (ADR first), never a convenience edit.
[tool.importlinter]
root_package = "irrevon"

[[tool.importlinter.contracts]]
name = "identity is pure: no imports from modules that handle raw model arguments"
type = "forbidden"
source_modules = ["irrevon.identity"]
forbidden_modules = ["irrevon.contract"]

# ADR-006 / RFC-002 §14: no authority module imports advisory, direct or
# indirect. The type-level layer (ClassifierProposal rejection) is enforced via
# the marker in irrevon.errors, tested in tests/advisory/.
[[tool.importlinter.contracts]]
name = "advisory is never on the authority path (ADR-006)"
type = "forbidden"
source_modules = [
    "irrevon.identity",
    "irrevon.contract",
    "irrevon.ledger",
    "irrevon.gate",
    "irrevon.dispatcher",
    "irrevon.reconciler",
    "irrevon.recovery",
    "irrevon.resolution",
    "irrevon.sweep",
    "irrevon.adapters",
    "irrevon.api",
    "irrevon.cli",
    "irrevon.serve",
    "irrevon.bench",
]
forbidden_modules = ["irrevon.advisory"]

# Benchmark anti-cheating boundary (ADR-0030; preregistration §8.2 + MLPerf-
# style closed-division discipline): arms (systems under test) can never see
# oracle truth data, fixture labels, metric computation, or the runner's
# orchestration state. A violation here is a benchmark-integrity incident,
# never a refactoring convenience.
[[tool.importlinter.contracts]]
name = "bench arms never see the oracle, fixtures, metrics, or runner"
type = "forbidden"
source_modules = ["irrevon.bench.arms"]
forbidden_modules = [
    "irrevon.bench.oracle",
    "irrevon.bench.fixtures",
    "irrevon.bench.metrics",
    "irrevon.bench.analysis",
    "irrevon.bench.runner",
]

# The engine under test never imports its own benchmark (no benchmark
# detection; master doc §8.1 contamination posture applied to code).
[[tool.importlinter.contracts]]
name = "the engine never imports the benchmark harness"
type = "forbidden"
source_modules = [
    "irrevon.identity",
    "irrevon.contract",
    "irrevon.ledger",
    "irrevon.gate",
    "irrevon.dispatcher",
    "irrevon.reconciler",
    "irrevon.recovery",
    "irrevon.resolution",
    "irrevon.sweep",
    "irrevon.adapters",
    "irrevon.api",
    "irrevon.advisory",
    "irrevon.serve",
]
forbidden_modules = ["irrevon.bench"]
